# aindex

./: .gitignore  API_DOCUMENTATION.md  ARM64_OPTIMIZATIONS.md  CIBUILDWHEEL_OPTIMIZATION.md  COLAB_INSTALL.md  CROSS_PLATFORM.md  Compute_aindex.cpp  Compute_index.cpp  EXTERNAL_REMOVAL_COMPLETE.md  INTEGRATION_SUMMARY.md  KMER_FREQUENCY_ITERATOR.md  LOCAL_BUILD.md  Makefile  PLATFORM_SUPPORT.md  QUICKSTART.md  README.md  aindex-arm64.sh  aindex.py  aindex2-1.3.21-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.3.21-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.3.21-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.3.21-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.3.21-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  analyze_kmers.py  build_macos.sh  build_reference.cpp  debrujin.cpp  demo.py  diagnose_colab.py  fix_cmake_colab.py  hash.cpp  hash.hpp  install_colab.py  kmers.cpp  kmers.hpp  pyproject.toml  python_wrapper.cpp  quickstart_frequency_iterator.py  read.hpp  requirements.txt  (+9 more)
.github/workflows/: build_wheels.yml
aindex/: __init__.py  cli.py
aindex/core/: aindex.py
aindex2.egg-info/: PKG-INFO  SOURCES.txt
conda_recipe/: build.sh  meta.yaml
examples/: colab_example.md  demo_13mer_integration.py  kmer_frequency_iterator_example.py
scripts/: compute_aindex.py  compute_index.py  demo.py  fasta_to_reads.py
src/: Compute_aindex.cpp  Compute_reads.cpp  build_reference.cpp  debrujin.cpp  debrujin.hpp  dna_bitseq.hpp  hash.cpp  hash.hpp  helpers.cpp  helpers.hpp  kmer_counter.cpp  kmers.cpp  kmers.hpp  python_wrapper.cpp  read.cpp  read.hpp  settings.cpp  settings.hpp
src/emphf/: base_hash.hpp  bitpair_vector.hpp  common.hpp
tests/: analyze_kmers.py  comprehensive_demo.py  demo.py  genes.py
tests/data/: test.fasta  test_R1.fastq  test_R2.fastq  test_reads.txt  test_se.fastq  test_unknown.txt
wheelhouse/: aindex2-1.0.1-cp38-cp38-manylinux_2_24_x86_64.whl  aindex2-1.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-pp310-pypy310_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-pp37-pypy37_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-pp38-pypy38_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aindex2-1.0.2-pp39-pypy39_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
