[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aindex2"
version = "1.4.0"
description = "Perfect hash based index for genome data."
authors = [{name = "Aleksey Komissarov", email = "ad3002@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "intervaltree==3.1.0",
    "editdistance==0.8.1",
    "psutil>=5.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/ad3002/aindex"

[project.scripts]
aindex = "aindex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aindex*"]

# ============================================================================
# cibuildwheel configuration - optimized for cross-platform builds
# ============================================================================

[tool.cibuildwheel]
# Build for Python 3.8+ on Linux and macOS only
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux* *-win*"  # Skip musl Linux and Windows distributions

# Test that wheels work - more robust test
test-command = [
    "python -c 'import sys; print(f\"Python {sys.version}\")'",
    "python -c 'import aindex; print(\"✓ aindex import successful\")'",
    "python -c 'from aindex import AIndex; print(\"✓ AIndex class available\")'",
]
test-skip = "cp38-macosx_*:arm64"  # Skip ARM64 tests for Python 3.8 due to cibuildwheel limitations

# ============================================================================
# Linux configuration
# ============================================================================

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

before-all = [
    "yum install -y make gcc-c++ || (apt-get update && apt-get install -y make build-essential)",
    "mkdir -p bin obj aindex/core aindex/bin",
]

before-build = [
    "pip install pybind11 numpy",
    "echo 'Building for Linux {wheel}'",
    "make clean || true",
    "mkdir -p bin obj aindex/core aindex/bin",
    # Set TARGET_ARCH based on wheel architecture for cross-compilation support
    "if echo '{wheel}' | grep -q 'aarch64'; then export TARGET_ARCH=aarch64 && echo 'Building aarch64 version' && make all TARGET_ARCH=aarch64; else export TARGET_ARCH=x86_64 && echo 'Building x86_64 version' && make all TARGET_ARCH=x86_64; fi",
]

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
MAKEFLAGS = "-j1"

# ============================================================================
# macOS configuration  
# ============================================================================

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

before-all = [
    "mkdir -p bin obj aindex/core aindex/bin",
]

before-build = [
    "pip install pybind11 numpy",
    "echo 'Building for macOS {wheel}'",
    "make clean || true",
    "mkdir -p bin obj aindex/core aindex/bin",
    # Set TARGET_ARCH based on wheel name for cross-compilation
    "if echo '{wheel}' | grep -q 'arm64'; then export TARGET_ARCH=arm64 && echo 'Building ARM64 version' && make arm64 TARGET_ARCH=arm64; else export TARGET_ARCH=x86_64 && echo 'Building x86_64 version' && make all TARGET_ARCH=x86_64; fi",
    "ls -la aindex/core/ || echo 'aindex/core not found'",
    "ls -la bin/ || echo 'bin not found'",
]

# Use simple copy instead of delocate for cross-arch compatibility
repair-wheel-command = "cp {wheel} {dest_dir}"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"  # Updated for better compatibility with Python 3.8+
MAKEFLAGS = "-j1"

# Note: Windows support is planned for future releases
# Currently supported platforms: Linux (x86_64, ARM64), macOS (x86_64, ARM64)