[metadata]
name = aindex2
version = 1.0.1
author = Aleksey Komissarov
author_email = ad3002@gmail.com
description = Perfect hash based index for genome data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ad3002/aindex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=3.6

[options]
packages = find:
install_requires =
    intervaltree
include_package_data = true

[options.package_data]
aindex.core = python_wrapper.so
