[metadata]
name = aindex2
version = 1.3.10
author = Aleksey Komissarov
author_email = ad3002@gmail.com
description = Perfect hash based index for genome data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ad3002/aindex
project_urls =
    Bug Tracker = https://github.com/ad3002/aindex/issues
    Documentation = https://github.com/ad3002/aindex
    Source Code = https://github.com/ad3002/aindex
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.20.0
    intervaltree==3.1.0
    editdistance==0.8.1

[options.packages.find]
where = .
include = aindex*
exclude =
    tests*
    docs*
    examples*

[options.package_data]
aindex = 
    bin/*
aindex.core = 
    *.so
    aindex_cpp*.so
    *.pyd

[options.entry_points]
console_scripts =
    aindex2 = aindex.cli:main

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

[build_ext]
inplace = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --strict-markers
    --tb=short

[coverage:run]
source = aindex
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstract

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .venv,
    external
ignore = E203, E266, E501, W503, F403, F401
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
